- Generify Turbine, step 3 - Chased some warnings - Removed UIManager
git-svn-id: https://svn.apache.org/repos/asf/turbine/core/trunk@1078552 13f79535-47bb-0310-9956-ffa450edef68